refactor: TritonInferResponse 응답 추출 메서드 정리